--- a/app/build.gradle
+++ b/app/build.gradle
@@ -21,11 +21,6 @@ android {
         }
     }
 
-    // Always show the result of every unit test when running via command line, even if it passes.
-    testOptions.unitTests {
-        includeAndroidResources = true
-    }
-
     dataBinding {
         enabled = true
         enabledForTests = true
@@ -63,6 +58,7 @@ dependencies {
     testImplementation "androidx.test:core-ktx:$androidXTestCoreVersion"
     testImplementation "org.robolectric:robolectric:$robolectricVersion"
     testImplementation "androidx.test.ext:junit-ktx:$androidXTestExtKotlinRunnerVersion"
+    testImplementation "androidx.arch.core:core-testing:$archTestingVersion"
 
     // AndroidX Test - Instrumented testing
     androidTestImplementation "androidx.test.ext:junit:$androidXTestExtKotlinRunnerVersion"
